--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -31,7 +31,7 @@ Nav Styles
 **/
 .food {
   padding: 125px;
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100%;
   background-color: black;
@@ -39,7 +39,8 @@ Nav Styles
   overflow: hidden;
   transition: all 0.3s ease-in-out;
   transform: scale(0);
-  opacity: 0.9;
+  opacity: 0.7;
+  z-index: 2;
 }
 .nav-wrapper {
   position: relative;
@@ -48,6 +49,8 @@ Nav Styles
   width: 100%;
   height: 100%;
 }
+
+
 
 .food a {
   position: relative;
