--- a/app/assets/stylesheets/components/_page1.scss
+++ b/app/assets/stylesheets/components/_page1.scss
@@ -1,27 +1,10 @@
-.slides {
+.home2 {
 	//position: absolute;
 	width: 100%;
 	height: 100%;
 }
 
-.slide {
-	//position: absolute;
-	width: 100%;
-  top: 50px;
-	overflow: hidden;
-	opacity: 0.7;
-	display: flex;
-	flex-direction: column;
-	align-content: center;
-	justify-content: center;
-	align-items: center;
-}
-
-.current-slide {
-  opacity: 1;
-}
-
-.slide__title {
+.hometitle {
 padding: 50px;
   display: flex;
   align-items: center;
@@ -38,7 +21,7 @@ padding: 50px;
   //position: relative;
 }
 
-.slide__desc {
+.homedesc {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -57,9 +40,9 @@ padding: 50px;
 }
 
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
 
-  .slide__title {
+  .hometitle {
     padding-top: 18px;
     padding-right: 150px;
     font-size: 36px;
@@ -72,7 +55,7 @@ padding: 50px;
     text-align:center;
   }
 
-  .slide__desc {
+  .homedesc {
     padding: 110px;
     font-size: 20px;
     line-height: 20px;
@@ -81,7 +64,5 @@ padding: 50px;
     align-content: center;
     justify-content: center;
     align-items: center;
-
-
   }
 }
